--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
-    <link rel="stylesheet" href="styles.css">
+  <title>321FIT Coach Portal</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple GitHub Pages site.</p>
+  <h1>Coach Portal</h1>
+  <div id="login-status"></div>
+  <button id="login-btn">Log In</button>
+  <div id="workout-form" style="display:none;">
+    <input id="workout-title" placeholder="Workout Title">
+    <input id="client-id" placeholder="Client ID">
+    <button onclick="queueWorkout()">Queue Workout</button>
+  </div>
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
